add some missing translations

--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -4,3 +4,5 @@ fr:
   profile: Mon profil
   edit_account: Modifier mon compte
   sign_out: Déconnexion
+  sign_up: Rejoignez-nous !
+  sign_in: Connection
