add some meaningless stuff in the footer

--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -6,3 +6,6 @@ fr:
   sign_out: Déconnexion
   sign_up: Rejoignez-nous !
   sign_in: Connection
+  about: À-propos
+  sitemap: Plan du site
+  source_code: Code source
