--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -11,7 +11,7 @@ fr:
   source_code: Code source
   site_preferences: Préférences du site
   contact: Contact
-  password: Mot de passe
+  password: Changer le mot de passe
   simple_form:
     labels:
       user:
