better style, again

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -15,6 +15,7 @@ en:
   my_informations: My informations
   back: Back
   forgot_password: Forgot your password?
+  report_bug: Report a bug
   simple_form:
     labels:
       user:
