add paths for user communities and couches

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -2,7 +2,7 @@ en:
   communities: Communities
   couches: Couches
   profile: My profile
-  edit_account: Edit my account
+  edit_account: Account
   sign_out: Sign-out
   sign_up: Join-us!
   sign_in: Sign-in
