--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -2,7 +2,7 @@ fr:
   communities: Communautés
   couches: Annonces
   profile: Mon profil
-  edit_account: Modifier mon compte
+  edit_account: Compte
   sign_out: Déconnexion
   sign_up: Rejoignez-nous !
   sign_in: Connection
