huge layout refacto

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,8 +1,8 @@
 en:
   communities: Communities
   couches: Couches
-  profile: My profile
-  edit_account: Account
+  profile: Edit profile
+  edit_account: Settings
   sign_out: Sign-out
   sign_up: Join-us!
   sign_in: Sign-in
