--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -15,6 +15,8 @@ en:
   my_informations: My informations
   back: Back
   forgot_password: Forgot your password?
+  search_placeholder: Search...
+  create_your_own_community: Create your own
   simple_form:
     labels:
       user:
