--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -15,6 +15,8 @@ fr:
   my_informations: Mes informations
   back: Retour
   forgot_password: Mot de passe oublié ?
+  search_placeholder: Rechercher ...
+  create_your_own_community: Créer votre communauté
   simple_form:
     labels:
       user:
