--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -17,6 +17,11 @@ en:
   forgot_password: Forgot your password?
   search_placeholder: Search...
   create_your_own_community: Create your own
+  home:
+    definition:
+      title: Hospitality (noun)
+      content: the act or service of welcoming, receiving, hosting, or entertaining guests.
+      example: Put an example here
   simple_form:
     labels:
       user:
