--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -1,7 +1,6 @@
 fr:
   profile: Profil
-  communities: Communautés
-  my_communities: Mes communautés
+  my_place: Chez moi
   couches: Annonces
   my_couches: Mes annonces
   edit_profile: Modifier le profil
@@ -16,7 +15,6 @@ fr:
   back: Retour
   forgot_password: Mot de passe oublié ?
   search_placeholder: Rechercher ...
-  create_your_own_community: Créer votre communauté
   simple_form:
     labels:
       user:
