set search query as placeholder

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -12,7 +12,7 @@ en:
   my_informations: My informations
   back: Back
   forgot_password: Forgot your password?
-  search_placeholder: Search...
+  search_placeholder: Search
   home:
     definition:
       title: Hospitality (noun)
