add a world-map link on the homepage

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -12,6 +12,7 @@ en:
   search_placeholder: Search
   goto_my_place: Go to my place
   ready_to_host: Ready to host?
+  world_map: World map
   home:
     definition:
       title: Hospitality (noun)
