add a 'my place' for connected users

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -33,6 +33,7 @@ en:
       user:
         create: Créer mon compte
   edit:
+    my_place: Edit my place
     profile: Edit profile
     settings: Settings
     password: Change your password
