add a 'create my place' link and remove some useless links

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -37,6 +37,8 @@ en:
     profile: Edit profile
     settings: Settings
     password: Change your password
+  create:
+    my_place: Create my place
   footer:
     about: About
     api_documentation: API documentation
