add a few more active links

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -31,7 +31,7 @@ en:
     submit:
       update: Update
       user:
-        create: Créer mon compte
+        create: Sign-up
   edit:
     my_place: Edit my place
     profile: Edit my profile
