add a conversation system

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -5,7 +5,7 @@ en:
   sign_up: Join-us!
   sign_in: Sign-in
   site_preferences: Site preferences
-  contact: Contact
+  send_a_message: Send a private message
   my_informations: My informations
   back: Back
   forgot_password: Forgot your password?
