--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -5,7 +5,7 @@ fr:
   sign_up: Rejoignez-nous !
   sign_in: Connection
   site_preferences: Préférences du site
-  contact: Contact
+  send_a_message: Envoyer un message privé
   my_informations: Mes informations
   back: Retour
   forgot_password: Mot de passe oublié ?
