--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -4,6 +4,9 @@ en:
   sign_out: Sign-out
   sign_up: Join-us!
   sign_in: Sign-in
+  conversations: Conversations
+  new_messages: New messages
+  new: new
   site_preferences: Site preferences
   send_a_message: Send a private message
   my_informations: My informations
