--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -4,6 +4,9 @@ fr:
   sign_out: Déconnexion
   sign_up: Rejoignez-nous !
   sign_in: Connection
+  conversations: Conversations
+  new_messages: Nouveau messages
+  new: nouveau
   site_preferences: Préférences du site
   send_a_message: Envoyer un message privé
   my_informations: Mes informations
